ingress-nlb/jenkins-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: jenkins-service
  namespace: jenkins
spec:
  selector:
    app: jenkins
  ports:
    - port: 80
      targetPort: 8080
