ingress-nlb/nlb-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - swamisandeepcloudrider.com
    secretName: tls-secret
  rules:
  - host: swamisandeepcloudrider.com
    http:
      paths:
        - path: /jenkins
          backend:
            serviceName: jenkins-service-def-ns
            servicePort: 8080
